fixed overflow

--- a/src/components/MyDailyNorma/MyDailyNormaModal/MyDailyNormaModal.module.css
+++ b/src/components/MyDailyNorma/MyDailyNormaModal/MyDailyNormaModal.module.css
@@ -19,7 +19,7 @@
 
 .modalParagraphContainer {
   max-height: 416px;
-  overflow-x: scroll;
+  overflow-y: scroll;
 }
 
 .forWoman {
@@ -165,7 +165,7 @@
   }
   .modalParagraphContainer {
     max-height: none;
-    overflow-x: unset;
+    overflow-y: unset;
   }
 }
 
